fix display issue on mobile

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -206,14 +206,20 @@ li ol {
 /* Figures and images */
 
 figure {
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: start;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  margin: 2em 0;
+  // display: -webkit-box;
+  // display: flex;
+  // -webkit-box-pack: justify;
+  // justify-content: space-between;
+  // -webkit-box-align: start;
+  // align-items: flex-start;
+  // flex-wrap: wrap;
+  // margin: 2em 0;
+
+  
+  display: block;
+  max-width: 100%;
+  margin: 0 auto;
+  border-radius: 5px;
 
   img,
   iframe,
